--- a/.github/workflows/PSMinifier.yml
+++ b/.github/workflows/PSMinifier.yml
@@ -1,7 +1,25 @@
 # https://github.com/marketplace/actions/psminifier
-- name: PSMinifier
-  uses: StartAutomating/PSMinifier@v1.1.3
-  with:
-    Include: "*.ps1"
-    CommitMessage: "Minifying $($_.Name)"
-    
+name: PSMinifier
+on:
+  workflow_dispatch:
+
+jobs:
+  minify:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: PSMinifier
+        uses: StartAutomating/PSMinifier@v1.1.3
+        with:
+          Include: "*.ps1"
+          CommitMessage: "Minifying $($_.Name)"
+          
+      - name: OutputMinifier
+        run: |    
+          echo Original Size ${{ steps.Minify.outputs.OriginalSize }} 
+          echo Minified Size ${{ steps.Minify.outputs.MinifiedSize }} 
+          echo Minified Percent ${{ steps.Minify.outputs.MinifiedPercent }}
