--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,6 @@
+* text=auto eol=crlf
+
 .editorconfig text eol=crlf
 *.json text eol=crlf
-*.md text eol=crlf
-*.ps1 text eol=crlf
-*.txt text eol=crlf
-*.yml text=auto
-*.yaml text=auto
 .github/actions/spelling/** text eol=lf
 *.winget linguist-language=yaml
