--- a/.gitattributes
+++ b/.gitattributes
@@ -5,8 +5,32 @@
 .github/actions/spelling/** text eol=lf
 *.winget linguist-language=yaml
 
-*.jpg   binary
-*.png   binary
-*.webp   binary
-*.avif   binary
-*.gif   binary
+*.jpg binary
+*.png binary
+*.webp binary
+*.avif binary
+*.gif binary
+
+*.sln merge=binary
+*.csproj merge=binary
+*.vbproj merge=binary
+*.vcxproj merge=binary
+*.vcproj merge=binary
+*.dbproj merge=binary
+*.fsproj merge=binary
+*.lsproj merge=binary
+*.wixproj merge=binary
+*.modelproj merge=binary
+*.sqlproj merge=binary
+*.wwaproj merge=binary
+*.cs diff=csharp
+*.doc diff=astextplain
+*.DOC diff=astextplain
+*.docx diff=astextplain
+*.DOCX diff=astextplain
+*.dot diff=astextplain
+*.DOT diff=astextplain
+*.pdf diff=astextplain
+*.PDF diff=astextplain
+*.rtf diff=astextplain
+*.RTF diff=astextplain
