--- a/.gitattributes
+++ b/.gitattributes
@@ -1,28 +1,69 @@
-* text=auto eol=crlf
+* text=auto eol=crlf whitespace=blank-at-eol,-blank-at-eof,-space-before-tab,tabwidth=2
 
-.editorconfig text eol=crlf
-*.json text eol=crlf
-.github/actions/spelling/** text eol=lf
-*.winget linguist-language=yaml
+# =============================================================================
+# Shell Scripts
+# =============================================================================
+*.{sh,bash,bashrc,bash_profile,bash_logout} text eol=lf diff=bash
+*.{cmd,bat,ps1} text
 
-*.jpg binary
-*.png binary
-*.webp binary
-*.avif binary
-*.gif binary
+# =============================================================================
+# Programming Languages
+# =============================================================================
+*.py diff=python
+*.{js,java} diff=java
+*.lua linguist-language=Lua
+*.nix linguist-language=Nix
 
-*.sln merge=binary
-*.csproj merge=binary
-*.vbproj merge=binary
-*.vcxproj merge=binary
-*.vcproj merge=binary
-*.dbproj merge=binary
-*.fsproj merge=binary
-*.lsproj merge=binary
-*.wixproj merge=binary
-*.modelproj merge=binary
-*.sqlproj merge=binary
-*.wwaproj merge=binary
+# =============================================================================
+# Configuration & Data Formats
+# =============================================================================
+*.json text diff=json
+*.jsonc diff=json linguist-language=JSONC
+*.yaml diff=yaml
+*.yml diff=yaml
+*.toml diff=toml linguist-language=TOML
+*.ron linguist-language=RON
+*.xml diff=xml
+*.html diff=html
+*.css diff=css
+*.md diff=markdown linguist-detectable linguist-documentation
+*.txt linguist-documentation
+*.{ini,cfg,conf,service,rules} text
+*.winget diff=yaml linguist-language=yaml
+.editorconfig text
+
+# =============================================================================
+# Binary Files
+# =============================================================================
+# Images
+*.{jpg,jpeg,webp,avif,jxl,png,gif,bmp,ico,ogg,opus,mp3,mp4,avi,mkv,flac,wav} binary diff=exif
+*.svg text
+
+# Fonts
+*.ttf binary
+
+*.{exe,dll,so} binary
+
+*.{7z,zip,rar,tar,gz,zstd,bz2} binary
+*.pdf binary
+
+# =============================================================================
+# Special Cases
+# =============================================================================
+# Patches
+*.{patch,diff} diff=patch
+
+# Git files
+.{gitignore,gitattributes,gitconfig,gitmodules,editorconfig} text
+
+# =============================================================================
+# Windows
+# =============================================================================
+*.ahk text eol=crlf
+*.{ps1,psm1,psd1} text eol=crlf
+*.{cmd,[cC][mM][dD]} text eol=crlf
+*.{bat,[bB][aA][tT]} text eol=crlf
+
 *.cs diff=csharp
 *.doc diff=astextplain
 *.DOC diff=astextplain
@@ -34,3 +75,14 @@
 *.PDF diff=astextplain
 *.rtf diff=astextplain
 *.RTF diff=astextplain
+*.sln merge=binary
+*.csproj merge=binary
+*.vbproj merge=binary
+*.vcxproj merge=binary
+*.vcproj merge=binary
+*.dbproj merge=binary
+*.fsproj merge=binary
+*.lsproj merge=binary
+*.wixproj merge=binary
+*.modelproj merge=binary
+*.sqlproj merge=binary
