--- a/.gitconfig
+++ b/.gitconfig
@@ -85,3 +85,31 @@
   backend = merge
   missingCommitsCheck = true
   abbreviateCommands = true
+[maintenance]
+  strategy = incremental
+[maintenance "prefetch"]
+  enabled = true
+[maintenance "gc"]
+  enabled = true
+[maintenance "loose-objects"]
+  enabled = true
+[maintenance "incremental-repack"]
+  enabled = true
+[maintenance "pack-refs"]
+  enabled = true
+[maintenance "reflog-expire"]
+  enabled = true
+[maintenance "rerere-gc"]
+  enabled = true
+[maintenance "worktree-prune"]
+  enabled = true
+[index]
+  version = 4
+  skipHash = true
+[repack]
+  useDeltaBaseOffset = true
+[gc]
+  autoDetach = true
+  packRefs = true
+  aggressive = true
+  repackFilter = blob:none
