--- a/.editorconfig
+++ b/.editorconfig
@@ -36,8 +36,8 @@ shell_variant = posix
 indent_size = 4
 
 [**.{bat,cmd,ps1,psm1}]
-indent_style = tab
-indent_size = 4
+indent_style = space
+indent_size = 2
 end_of_line = crlf
 
 # =============================================================================
